Fixes refresh link alignment in small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -782,6 +782,12 @@ h4 a.refresh{
     }
 }
 
+@media only screen and (max-width: 756px) {
+  h4 a.refresh{
+    margin-top: 1px;
+    }
+}
+
 .sidepanel{
   margin-bottom: 1em !important;
   border-radius: 5px;
